Fix images overlapping in front page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -150,6 +150,7 @@ h1, h2, h3, h4, h5, h6 {
   img {
     position: relative;
     border: 1px solid #beb8bc;
+    min-width: 300px;
   }
 
   h2 {
